# payment_system

./: .env  .env.example  .gitignore  Cargo.toml  diesel.toml
migrations/2023-03-14-180127_add_users/: down.sql  up.sql
src/: dtos.rs  main.rs  models.rs  schema.rs
