[package]
name = "payment_system"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
deadpool-diesel = { version = "0.4.1", features = ["sqlite"] }
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
diesel_migrations = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
async-stripe = { version = "0.37.1", features = ["runtime-tokio-hyper"] }
